...
                if url.isEmpty {
                    if isAvatar {
                        Image(systemName: "person.circle.fill")
                            .resizable()
                            .scaledToFit()
                            .foregroundStyle(.white)
                            .accessibilityIdentifier("ProfileIcon")
                    } else {
                        placeHolder(imageName: "photo.fill")
                    }
                } else {
                    AsyncImage(url: URL(string: url)) { phase in
                        switch phase {
...
