...
        Spacer()
        Button {
            print("button tapped")
        } label: {
            HStack(spacing: 16) {
                Image(systemName: "envelope.fill")
                Text("Sign in with email")
                    .frame(maxWidth: .infinity, alignment: .leading)
            }
        }
        .buttonStyle(AppButtonPlain(small: false))
        .padding(.horizontal, 74)

...
