...
            Button {
                showAddEventView.toggle()
            } label: {
                Image(systemName: "plus")
            }
            .buttonStyle(AppButtonSquare())
            .accessibilityLabel("Add an event")
            .padding(.all, 8)
        }
    }
}

// MARK: Search list
...
